@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          add sources for gitweb and text files
 
 0.100110  2010-01-11 19:10:14 America/New_York
           do not require users to install JSON::XS
